# sdl2GameC

./: CMakeLists.txt  cmakea  defines.h  main.c
